--- a/project.config.json
+++ b/project.config.json
@@ -9,6 +9,11 @@
       "fileId": "1gDwO-32cgpBDn_0niV0iu6TqQTaRDr4nmSqnT53magY",
       "type": "sheet",
       "name": "bookstores"
+    } ,
+    {
+      "fileId": "15Y_5h_7ZezPS2GACiTEHrEEcnCIn6WjjzLYDxzZuWPw",
+      "type": "sheet",
+      "name": "Queen"
     }
   ],
   "to_bake": [
