--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
     {
       "fileId": "15Y_5h_7ZezPS2GACiTEHrEEcnCIn6WjjzLYDxzZuWPw",
       "type": "sheet",
-      "name": "Queen"
+      "name": "queen"
     }
   ],
   "to_bake": [
